--- a/css/global.css
+++ b/css/global.css
@@ -2,11 +2,11 @@
   font-weight: 300;
 }
 
-.section-box .main-title div:nth-of-type(2), .section-box .movie-level, #login .nobr {
+.section-box .movie-level, #login .nobr {
   font-weight: 400;
 }
 
-.modal-content p, .modal-content label, .modal-content .modal-info .submmitbtn button {
+.section-box .main-title div:nth-of-type(2), .modal-content p, .modal-content label, .modal-content .modal-info .submmitbtn button {
   font-weight: 600;
 }
 
@@ -30,6 +30,7 @@ html {
   position: relative;
   background-color: #282828;
   line-height: 1.6;
+  font-weight: normal;
   font-family: Microsoft JhengHei, Arial, sans-serif;
 }
 body.no-scroll,
@@ -62,6 +63,11 @@ h6,
 p {
   margin: 0;
   padding: 0;
+  font-weight: normal;
+}
+
+div {
+  font-weight: normal;
 }
 
 hr {
@@ -99,10 +105,6 @@ samp {
   font-size: 1em;
 }
 
-small {
-  font-size: 80%;
-}
-
 sub,
 sup {
   font-size: 75%;
@@ -130,13 +132,10 @@ optgroup,
 select,
 textarea {
   font-family: inherit;
-  /* 1 */
   font-size: 100%;
-  /* 1 */
   line-height: 1.15;
-  /* 1 */
+  font-weight: normal;
   margin: 0;
-  /* 2 */
 }
 
 input[type=text],
@@ -148,6 +147,7 @@ input[type=number] {
   border-radius: 5px;
   border: 1px solid #818181;
   background: #EBEBEB;
+  font-weight: normal;
 }
 
 /* The container */
@@ -166,6 +166,7 @@ input[type=number] {
   position: absolute;
   opacity: 0;
   cursor: pointer;
+  font-weight: normal;
 }
 
 .container-checkbox .checkmark {
@@ -237,6 +238,10 @@ button,
 [type=submit] {
   -webkit-appearance: button;
   cursor: pointer;
+  background: transparent;
+  border: 1px solid transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 button::-moz-focus-inner,
@@ -334,9 +339,12 @@ legend,
 label,
 input,
 ul,
-li {
+li,
+span {
   margin: 0;
   padding: 0;
+  font-weight: normal;
+  text-shadow: none;
 }
 
 ul,
@@ -578,6 +586,9 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   display: -ms-flexbox;
   display: flex;
 }
+.sidebar .menu > li:hover .menu-link {
+  font-weight: 600;
+}
 .sidebar .menu .menu-link {
   position: relative;
   display: inline-block;
@@ -586,14 +597,6 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   color: #fff;
   -webkit-transition: color 0.4s ease, font-weight 0.4s ease;
   transition: color 0.4s ease, font-weight 0.4s ease;
-}
-.sidebar .menu .menu-link:hover {
-  color: #fff;
-  font-weight: bold;
-}
-.sidebar .menu .menu-link:focus {
-  color: #fff;
-  font-weight: bold;
 }
 .sidebar .menu .dropdown-menu {
   position: absolute;
@@ -900,9 +903,8 @@ nav .input-toggler:checked ~ .sidebar-overlay {
       flex-wrap: wrap;
 }
 .section-box .section .content-row .row-1 {
-  -webkit-box-flex: 10%;
-      -ms-flex: 10%;
-          flex: 10%;
+  -ms-flex-preferred-size: 10%;
+      flex-basis: 10%;
   width: 10%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
@@ -918,9 +920,8 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   }
 }
 .section-box .section .content-row .row-2 {
-  -webkit-box-flex: 20%;
-      -ms-flex: 20%;
-          flex: 20%;
+  -ms-flex-preferred-size: 20%;
+      flex-basis: 20%;
   width: 20%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
@@ -948,9 +949,8 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   }
 }
 .section-box .section .content-row .row-3 {
-  -webkit-box-flex: 30%;
-      -ms-flex: 30%;
-          flex: 30%;
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
   width: 30%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
@@ -966,15 +966,13 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   }
 }
 .section-box .section .content-row .row-4 {
-  -webkit-box-flex: 40%;
-      -ms-flex: 40%;
-          flex: 40%;
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
   width: 40%;
 }
 .section-box .section .content-row .row-7 {
-  -webkit-box-flex: 70%;
-      -ms-flex: 70%;
-          flex: 70%;
+  -ms-flex-preferred-size: 70%;
+      flex-basis: 70%;
   width: 70%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
@@ -992,15 +990,13 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   }
 }
 .section-box .section .content-row .row-6 {
-  -webkit-box-flex: 60%;
-      -ms-flex: 60%;
-          flex: 60%;
+  -ms-flex-preferred-size: 60%;
+      flex-basis: 60%;
   width: 60%;
 }
 .section-box .section .content-row .row-5 {
-  -webkit-box-flex: 50%;
-      -ms-flex: 50%;
-          flex: 50%;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
   width: 50%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
@@ -1020,16 +1016,34 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   }
 }
 .section-box .section .content-row .row-8 {
-  -webkit-box-flex: 80%;
-      -ms-flex: 80%;
-          flex: 80%;
+  -ms-flex-preferred-size: 80%;
+      flex-basis: 80%;
   width: 80%;
 }
 .section-box .section .content-row .row-9 {
-  -webkit-box-flex: 90%;
-      -ms-flex: 90%;
-          flex: 90%;
+  -ms-flex-preferred-size: 90%;
+      flex-basis: 90%;
   width: 90%;
+}
+.section-box .section .tab {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin-bottom: 30px;
+}
+.section-box .section .tab .tab-list {
+  border: 1px solid #FCC900;
+  color: #FCC900;
+  padding: 5px 0;
+  text-align: center;
+  width: 8em;
+  margin-right: 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.section-box .section .tab .tab-list.active {
+  color: #000;
+  background-color: #FCC900;
 }
 
 footer {
