--- a/scss/all.scss
+++ b/scss/all.scss
@@ -351,16 +351,25 @@
 }
 
 .booking-history {
-  border-top: 1px solid v.$font-secondary;
-  padding:40px 20px 0 20px;
-  margin-bottom: 40px;
+  .item {
+    border-top: 1px solid v.$font-secondary;
+    padding: 40px 5em 0 5em;
+    margin-bottom: 40px;
+
+    @include v.other-width {
+      padding: 20px 0 0 0;
+      justify-content: center;
+    }
+  }
+
   .row-left {
     img {
-      width: 90%;
+      width: 100%;
     }
   }
 
   .row-right {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -393,20 +402,63 @@
   }
 
   .booking-list {
-    
+
     .list {
       display: flex;
       margin-bottom: 5px;
 
-      &:last-of-type{
+      &:last-of-type {
         margin-bottom: 0;
       }
+
       label {
         width: 90px;
         min-width: 90px;
         color: v.$font-secondary;
       }
-     
+
+    }
+  }
+
+  .ticket-state {
+    position: absolute;
+    right: 0;
+
+    .state {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 10px;
+      color: v.$font-primary;
+      padding: 5px 25px;
+      border-radius: 3px;
+      cursor: pointer;
+
+      &.paid {
+        @include v.bg-opacity(v.$blue-bg-color, 0.8)
+      }
+
+      &.getQR {
+        background-color: v.$blue-bg-color;
+      }
+
+      &.refund {
+        border: 1px solid v.$primary;
+      }
+
+      .material-icons {
+        margin-left: 3px;
+      }
+    }
+  }
+}
+.news{
+  .event{
+    padding-right: 20px;
+   
+    img{
+      width: 100%;
+      border-radius: 5px;
+
     }
   }
 }
