--- a/scss/all.scss
+++ b/scss/all.scss
@@ -251,7 +251,6 @@
 
     p {
       width: 100%;
-      margin-bottom: 15px;
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
@@ -299,7 +298,7 @@
 
   .list-item {
     >div {
-      margin-bottom: 10px;
+      margin-bottom: 15px;
       @extend %weight600;
 
 
@@ -308,6 +307,7 @@
         border-left: 1px solid #fff;
         padding-left: 10px;
         margin-left: 10px;
+        display: inline-block;
       }
     }
 
@@ -440,15 +440,13 @@
   .event{
     padding: 0 10px;
     margin-bottom: 40px;
-    .new-info{
-      p:first-of-type{
-        margin: 15px 0;
-      }
+    .sub-title{
+      margin-top: 20px;
+      margin-bottom: 0;
     }
     img{
       width: 100%;
       border-radius: 5px;
-
     }
   }
 }
@@ -458,10 +456,14 @@
     margin-bottom: 30px;
     align-items: center;
     .back{
-      border-radius: 3px;
-      border: 1px solid v.$yellow-bg-color;
+      width: 100%;
+      height: fit-content;
       color: v.$yellow-bg-color;
     }
+  }
+  .row-left{
+    padding-right: 40px;
+    img{border-radius: 5px;}
   }
   .hr-line{
     width: 100px;
