新增頁面 調整樣式

--- a/css/global.css
+++ b/css/global.css
@@ -1309,6 +1309,14 @@ footer > div a img {
   outline-width: 0px;
 }
 
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
 .s-font {
   font-size: 0.9rem;
 }
