--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1237,10 +1237,11 @@ footer {
 }
 
 /* other share */
-:focus {
+:focus { 
   outline-width: 0px;
 }
-
+.hide{display: none;}
+.show{display: block;}
 .s-font {
   font-size: 0.9rem;
 }
