--- a/scss/global.scss
+++ b/scss/global.scss
@@ -556,12 +556,12 @@ nav {
       li {
         padding: 4px 0;
         margin-bottom: 5px;
-
-        &:nth-of-type(1) {
+      
+        &:nth-of-type(odd) {
           background-color: v.$primary;
         }
 
-        &:nth-of-type(2) {
+        &:nth-of-type(even) {
           background-color: v.$font-secondary;
         }
 
@@ -697,15 +697,15 @@ nav {
           opacity: 1;
 
           &:nth-of-type(1) {
-            transition-delay: 0.8s;
+            transition-delay: 0.5s;
           }
 
           &:nth-of-type(2) {
-            transition-delay: 1s;
+            transition-delay: 0.8s;
           }
 
           &:nth-of-type(3) {
-            transition-delay: 1.2s;
+            transition-delay: 1s;
           }
         }
       }
@@ -980,9 +980,8 @@ nav {
         cursor: pointer;
         border: 1px solid v.$yellow-bg-color;
         color: v.$yellow-bg-color;
-        padding: 5px 0;
+        padding: 10px 3em; 
         text-align: center;
-        width: 8em;
         margin-right: 20px;
         
       
@@ -1073,7 +1072,6 @@ footer {
   z-index: 20;
 }
 
-/*content :D*/
 .modal-content {
   position: fixed;
   top: 10%;
@@ -1236,28 +1234,19 @@ footer {
   }
 }
 
+
+
 /* other share */
-:focus { 
-  outline-width: 0px;
-}
+:focus{outline-width: 0px;}
 .hide{display: none;}
-.show{display: block;}
-.s-font {
-  font-size: 0.9rem;
-}
-
-.xs-font {
-  font-size: 0.8rem;
-}
-
+.s-font{font-size: 0.9rem;}
+.xs-font{font-size: 0.8rem;}
 .l-font {
   font-size: 1.4rem;
-}
-
+}  
 .material-icons {
   vertical-align: sub;
 }
-
 .hr-line {
   width: 50px;
   margin-left: 0;
@@ -1266,7 +1255,6 @@ footer {
   border: none;
   margin: 1.3em 0;
 }
-
 .mul-ellipsis-4 {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -1274,7 +1262,6 @@ footer {
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
 }
-
 .mul-ellipsis-3 {
   overflow: hidden;
   text-overflow: ellipsis;
