--- a/css/all.css
+++ b/css/all.css
@@ -6,7 +6,7 @@
   font-weight: 400;
 }
 
-.movie-item .list-item > div, .booking-history .ticket-no {
+.movie-item .list-item > div, .booking-history .ticket-no, .account label {
   font-weight: 600;
 }
 
@@ -442,10 +442,6 @@
 }
 
 .news-info .actions {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 30px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -468,6 +464,10 @@
 }
 .news-info .new-content p {
   margin-bottom: 20px;
+}
+
+.account label {
+  color: #00ABF2;
 }
 
 @-webkit-keyframes rotate {
