--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,4 @@
-.section-box .main-title div:nth-of-type(1), .section-box .movie-title span, .modal-content .modal-info .info:not(:last-of-type) .forgetpwd, .modal-content .modal-info .info:not(:last-of-type) .lockpwd, #regist label[for=confirmrule] {
+.section-box .main-title div:nth-of-type(1), .section-box .movie-title span, .modal-content .modal-info .row:not(:last-of-type) .forgetpwd, .modal-content .modal-info .row:not(:last-of-type) .lockpwd, #regist label[for=confirmrule] {
   font-weight: 300;
 }
 
@@ -14,10 +14,6 @@
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-}
-
-:root {
-  --swiper-theme-color: #fff !important;
 }
 
 body,
@@ -135,11 +131,12 @@ input[type=text],
 input[type=password],
 input[type=number] {
   width: 100%;
-  height: 40px;
+  height: 45px;
   padding: 0 10px;
   border-radius: 5px;
   border: 1px solid #818181;
-  background: #EBEBEB;
+  background: rgba(235, 235, 235, 0.0941176471);
+  color: #fff;
 }
 
 /* The container */
@@ -193,6 +190,10 @@ input[type=number] {
   border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
+}
+
+form {
+  width: 100%;
 }
 
 select {
@@ -390,7 +391,7 @@ li {
 /* nav */
 nav {
   width: 100%;
-  max-width: 1300px;
+  max-width: 1200px;
   margin: 0 auto;
   top: 0;
   left: 0;
@@ -560,6 +561,51 @@ nav .input-toggler:checked ~ .sidebar-overlay {
       -ms-flex-positive: 1;
           flex-grow: 1;
 }
+.sidebar .menu .dropdown-menu {
+  width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  position: absolute;
+  top: 45px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  overflow: hidden;
+  visibility: hidden;
+  -webkit-transition: visibility 0.5s linear;
+  transition: visibility 0.5s linear;
+}
+@media all and (max-width: 768px) {
+  .sidebar .menu .dropdown-menu {
+    position: static;
+    display: block;
+  }
+}
+.sidebar .menu .dropdown-menu li {
+  padding: 4px 0;
+  margin-bottom: 5px;
+  -webkit-transform: translateY(-150px);
+          transform: translateY(-150px);
+  -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.74, -0.23, 0.4, 0.88);
+  transition: -webkit-transform 0.5s cubic-bezier(0.74, -0.23, 0.4, 0.88);
+  transition: transform 0.5s cubic-bezier(0.74, -0.23, 0.4, 0.88);
+  transition: transform 0.5s cubic-bezier(0.74, -0.23, 0.4, 0.88), -webkit-transform 0.5s cubic-bezier(0.74, -0.23, 0.4, 0.88);
+}
+.sidebar .menu .dropdown-menu li:nth-of-type(odd) {
+  background-color: #C53932;
+}
+.sidebar .menu .dropdown-menu li:nth-of-type(even) {
+  background-color: #818181;
+}
+.sidebar .menu .dropdown-menu li a {
+  color: #fff;
+  font-size: 0.9rem;
+}
 .sidebar .menu > li {
   width: 15%;
   text-align: center;
@@ -571,10 +617,12 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   }
 }
 .sidebar .menu > li:hover .dropdown-menu {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  visibility: visible;
+}
+.sidebar .menu > li:hover .dropdown-menu li {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  opacity: 1;
 }
 .sidebar .menu .menu-link {
   position: relative;
@@ -584,40 +632,6 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   color: #fff;
   -webkit-transition: color 0.4s ease, font-weight 0.4s ease;
   transition: color 0.4s ease, font-weight 0.4s ease;
-}
-.sidebar .menu .dropdown-menu {
-  position: absolute;
-  top: 37px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  display: none;
-  z-index: 99;
-  padding-top: 10px;
-}
-@media all and (max-width: 768px) {
-  .sidebar .menu .dropdown-menu {
-    position: static;
-    display: block;
-  }
-}
-.sidebar .menu .dropdown-menu li {
-  padding: 4px 0;
-  margin-bottom: 5px;
-}
-.sidebar .menu .dropdown-menu li:nth-of-type(odd) {
-  background-color: #C53932;
-}
-.sidebar .menu .dropdown-menu li:nth-of-type(even) {
-  background-color: #818181;
-}
-.sidebar .menu .dropdown-menu li a {
-  color: #fff;
-  font-size: 0.9rem;
 }
 .sidebar .user-account {
   cursor: pointer;
@@ -680,18 +694,18 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   height: 0;
   overflow: hidden;
   width: 100%;
-  -webkit-transition: height 0.4s cubic-bezier(0.56, 0, 0, 1);
-  transition: height 0.4s cubic-bezier(0.56, 0, 0, 1);
+  -webkit-transition: height 0.3s cubic-bezier(0.6, -0.3, 0.4, 0.88);
+  transition: height 0.3s cubic-bezier(0.6, -0.3, 0.4, 0.88);
 }
 .sidebar .user-account div.account-sub hr {
   width: 85%;
   margin: 30px auto 20px auto;
   -webkit-transform: scaleX(0);
           transform: scaleX(0);
-  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
-  transition: -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
-  transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1);
-  transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1), -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
+  -webkit-transition: -webkit-transform 0.4s ease;
+  transition: -webkit-transform 0.4s ease;
+  transition: transform 0.4s ease;
+  transition: transform 0.4s ease, -webkit-transform 0.4s ease;
 }
 .sidebar .user-account div.account-sub a {
   display: block;
@@ -700,10 +714,10 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   overflow: hidden;
   -webkit-transform: translate(0px, -5px);
           transform: translate(0px, -5px);
-  -webkit-transition: opacity 0.6s ease, -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
-  transition: opacity 0.6s ease, -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
-  transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1), opacity 0.6s ease;
-  transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1), opacity 0.6s ease, -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
+  -webkit-transition: opacity 0.4s linear, -webkit-transform 0.4s linear;
+  transition: opacity 0.4s linear, -webkit-transform 0.4s linear;
+  transition: transform 0.4s linear, opacity 0.4s linear;
+  transition: transform 0.4s linear, opacity 0.4s linear, -webkit-transform 0.4s linear;
   padding: 0 0 15px 0;
 }
 .sidebar .user-account div.account-sub a::before {
@@ -721,13 +735,9 @@ nav .input-toggler:checked ~ .sidebar-overlay {
 }
 .sidebar .user-account.-active {
   background-color: #C53932;
-  -webkit-transition-delay: 0.2s;
-          transition-delay: 0.2s;
 }
 .sidebar .user-account.-active .account-sub {
   height: 190px;
-  -webkit-transition-delay: 0.1s;
-          transition-delay: 0.1s;
 }
 .sidebar .user-account.-active .account-sub hr {
   -webkit-transform: scaleX(1);
@@ -743,42 +753,40 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   opacity: 1;
 }
 .sidebar .user-account.-active .account-sub a:nth-of-type(1) {
-  -webkit-transition-delay: 0.5s;
-          transition-delay: 0.5s;
+  -webkit-transition-delay: 0.4s;
+          transition-delay: 0.4s;
 }
 .sidebar .user-account.-active .account-sub a:nth-of-type(2) {
+  -webkit-transition-delay: 0.6s;
+          transition-delay: 0.6s;
+}
+.sidebar .user-account.-active .account-sub a:nth-of-type(3) {
   -webkit-transition-delay: 0.8s;
           transition-delay: 0.8s;
 }
-.sidebar .user-account.-active .account-sub a:nth-of-type(3) {
-  -webkit-transition-delay: 1s;
-          transition-delay: 1s;
-}
 .sidebar .user-account.-leave {
   background-color: transparent;
-  -webkit-transition: background-color 0.4s cubic-bezier(0.56, 0, 0, 1) 1.3s;
-  transition: background-color 0.4s cubic-bezier(0.56, 0, 0, 1) 1.3s;
 }
 .sidebar .user-account.-leave .account-sub {
-  -webkit-transition: height 0.4s cubic-bezier(0.56, 0, 0, 1) 1s;
-  transition: height 0.4s cubic-bezier(0.56, 0, 0, 1) 1s;
+  -webkit-transition: height 0.3s cubic-bezier(0.6, -0.3, 0.4, 0.88) 1s;
+  transition: height 0.3s cubic-bezier(0.6, -0.3, 0.4, 0.88) 1s;
   height: 0;
 }
 .sidebar .user-account.-leave .account-sub hr {
-  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1) 0.9s;
-  transition: -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1) 0.9s;
-  transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1) 0.9s;
-  transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1) 0.9s, -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1) 0.9s;
+  -webkit-transition: -webkit-transform 0.4s ease 0.9s;
+  transition: -webkit-transform 0.4s ease 0.9s;
+  transition: transform 0.4s ease 0.9s;
+  transition: transform 0.4s ease 0.9s, -webkit-transform 0.4s ease 0.9s;
   -webkit-transform: scaleX(0);
           transform: scaleX(0);
   -webkit-transform-origin: right;
           transform-origin: right;
 }
 .sidebar .user-account.-leave .account-sub a {
-  -webkit-transition: opacity 0.6s ease, -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
-  transition: opacity 0.6s ease, -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
-  transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1), opacity 0.6s ease;
-  transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1), opacity 0.6s ease, -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
+  -webkit-transition: opacity 0.5s linear, -webkit-transform 0.3s linear;
+  transition: opacity 0.5s linear, -webkit-transform 0.3s linear;
+  transition: transform 0.3s linear, opacity 0.5s linear;
+  transition: transform 0.3s linear, opacity 0.5s linear, -webkit-transform 0.3s linear;
   -webkit-transform: translate(0px, -5px);
           transform: translate(0px, -5px);
   opacity: 0;
@@ -876,7 +884,7 @@ nav .input-toggler:checked ~ .sidebar-overlay {
 }
 .section-box .section {
   color: #fff;
-  max-width: 1300px;
+  max-width: 1200px;
   margin: 50px auto 50px auto;
 }
 .section-box .section:last-of-type {
@@ -891,6 +899,28 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+.section-box .section .content-row .row {
+  width: 100%;
+  margin-bottom: 15px;
+}
+.section-box .section .content-row .icon-row {
+  position: relative;
+}
+.section-box .section .content-row .icon-row input {
+  padding-left: 60px;
+  color: #fff;
+}
+.section-box .section .content-row .icon-row .material-icons {
+  position: absolute;
+  left: 15px;
+  top: 35px;
+  color: #282828;
+  font-size: 30px;
+  cursor: pointer;
+}
+.section-box .section .content-row .icon-row .material-icons.pwd-on {
+  color: #C7BA9B;
 }
 .section-box .section .content-row .row-1 {
   -ms-flex-preferred-size: 10%;
@@ -1059,7 +1089,7 @@ footer img {
           flex: 0;
 }
 footer > div {
-  max-width: 1300px;
+  max-width: 1200px;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1170,20 +1200,24 @@ footer > div a img {
 }
 .modal-content label {
   display: block;
-  margin-bottom: 3px;
+  margin: 3px 0;
+}
+.modal-content input {
+  background: #e2e2e2;
+  color: #000;
 }
 .modal-content .modal-info {
   padding: 25px 4vw;
 }
-.modal-content .modal-info .info:not(:last-of-type) {
+.modal-content .modal-info .row:not(:last-of-type) {
   margin-bottom: 15px;
 }
-.modal-content .modal-info .info:not(:last-of-type) .forgetpwd {
+.modal-content .modal-info .row:not(:last-of-type) .forgetpwd {
   font-size: 0.5em;
   color: #818181;
   letter-spacing: 0px;
 }
-.modal-content .modal-info .info:not(:last-of-type) .lockpwd {
+.modal-content .modal-info .row:not(:last-of-type) .lockpwd {
   margin-top: 5px;
 }
 .modal-content .modal-info .submmitbtn {
@@ -1257,13 +1291,14 @@ footer > div a img {
 #login .safeverify > div .imgsafe a {
   background-color: #282828;
   width: 30px;
-  height: 30px;
+  height: 26px;
   text-align: center;
   border-radius: 100%;
   margin-left: 5px;
+  line-height: 21px;
 }
 #login .safeverify > div .imgsafe a .material-icons {
-  font-size: 17px;
+  font-size: 16px;
 }
 
 #regist .required-icon {
@@ -1305,6 +1340,26 @@ footer > div a img {
 /* other share */
 :focus {
   outline-width: 0px;
+}
+
+::-webkit-input-placeholder {
+  color: rgba(129, 129, 129, 0.4784313725);
+}
+
+::-moz-placeholder {
+  color: rgba(129, 129, 129, 0.4784313725);
+}
+
+:-ms-input-placeholder {
+  color: rgba(129, 129, 129, 0.4784313725);
+}
+
+::-ms-input-placeholder {
+  color: rgba(129, 129, 129, 0.4784313725);
+}
+
+::placeholder {
+  color: rgba(129, 129, 129, 0.4784313725);
 }
 
 .hide {
