--- a/scss/global.scss
+++ b/scss/global.scss
@@ -5,10 +5,6 @@
   box-sizing: border-box;
 }
 
-:root {
-  --swiper-theme-color: #fff !important;
-}
-
 body,
 html {
   -webkit-text-size-adjust: 100%;
@@ -117,11 +113,12 @@ input[type='text'],
 input[type='password'],
 input[type='number'] {
   width: 100%;
-  height: 40px;
+  height: 45px;
   padding: 0 10px;
   border-radius: 5px;
   border: 1px solid v.$font-secondary;
-  background: #EBEBEB;
+  background: #ebebeb18;
+  color: v.$font-primary;
 }
 
 /* The container */
@@ -177,7 +174,7 @@ input[type='number'] {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
-
+form{width: 100%;}
 select {
   -moz-appearance: none;
   /* Firefox */
@@ -192,7 +189,6 @@ select {
   border-radius: 5px;
   padding: 0 15px;
   border: 1px solid v.$font-secondary;
-
 }
 
 button,
@@ -504,6 +500,42 @@ nav {
     flex-shrink: 1;
     flex-grow: 1;
 
+  .dropdown-menu {
+      width: 100%;
+      height: fit-content;
+      position: absolute;
+      top: 45px;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+      visibility: hidden;
+      transition:visibility 0.5s linear ;
+
+      @include v.phone-width {
+        position: static;
+        display: block;
+      }
+
+      li {
+        padding: 4px 0;
+        margin-bottom: 5px;
+        transform: translateY(-150px);
+        transition: transform .5s cubic-bezier(.74,-0.23,.4,.88);
+      
+        &:nth-of-type(odd) {
+          background-color: v.$primary;
+        }
+
+        &:nth-of-type(even) {
+          background-color: v.$font-secondary;
+        } 
+
+        a {
+          color: v.$font-primary;
+          font-size: 0.9rem;
+        }
+      }
+    }
 
     >li {
       width: 15%;
@@ -516,8 +548,11 @@ nav {
 
       &:hover {
         & .dropdown-menu {
-          width: 100%;
-          display: flex;
+          visibility:visible;
+          li{
+            transform: translateY(0);
+            opacity: 1;
+          }
         }
 
         .menu-link {
@@ -536,39 +571,6 @@ nav {
 
       &.active {
         @extend %weight600;
-      }
-    }
-
-    .dropdown-menu {
-      position: absolute;
-      top: 37px;
-      display: flex;
-      flex-direction: column;
-      display: none;
-      z-index: 99;
-      padding-top: 10px;
-
-      @include v.phone-width {
-        position: static;
-        display: block;
-      }
-
-      li {
-        padding: 4px 0;
-        margin-bottom: 5px;
-      
-        &:nth-of-type(odd) {
-          background-color: v.$primary;
-        }
-
-        &:nth-of-type(even) {
-          background-color: v.$font-secondary;
-        }
-
-        a {
-          color: v.$font-primary;
-          font-size: 0.9rem;
-        }
       }
     }
   }
@@ -612,8 +614,6 @@ nav {
 
       &.user-login {
         display: inline-block;
-
-
       }
 
       &.user-regist {
@@ -638,13 +638,13 @@ nav {
         height: 0;
         overflow: hidden;
         width: 100%;
-        transition: height 0.4s cubic-bezier(0.56, 0, 0, 1);
+        transition: height 0.3s cubic-bezier(.6,-0.3,.4,.88);
 
         hr {
           width: 85%;
           margin: 30px auto 20px auto;
           transform: scaleX(0);
-          transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1);
+          transition: transform 0.4s ease;
         }
 
         a {
@@ -653,8 +653,8 @@ nav {
           opacity: 0;
           overflow: hidden;
           transform: translate(0px, -5px);
-          transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1),
-            opacity 0.6s ease;
+          transition: transform 0.4s linear,
+            opacity 0.4s linear;
           padding: 0 0 15px 0;
 
           &::before {
@@ -680,11 +680,9 @@ nav {
 
     &.-active {
       background-color: v.$primary;
-      transition-delay: 0.2s;
 
       .account-sub {
         height: 190px;
-        transition-delay: 0.1s;
 
         hr {
           transform: scaleX(1);
@@ -697,15 +695,15 @@ nav {
           opacity: 1;
 
           &:nth-of-type(1) {
-            transition-delay: 0.5s;
+            transition-delay: 0.4s;
           }
 
           &:nth-of-type(2) {
-            transition-delay: 0.8s;
+            transition-delay: 0.6s;
           }
 
           &:nth-of-type(3) {
-            transition-delay: 1s;
+            transition-delay: 0.8s;
           }
         }
       }
@@ -713,21 +711,20 @@ nav {
 
     &.-leave {
       background-color: transparent;
-      transition: background-color 0.4s cubic-bezier(0.56, 0, 0, 1) 1.3s;
 
       .account-sub {
-        transition: height 0.4s cubic-bezier(0.56, 0, 0, 1) 1s;
+        transition: height 0.3s cubic-bezier(.6,-0.3,.4,.88) 1s;
         height: 0;
 
         hr {
-          transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1) 0.9s;
+          transition: transform 0.4s ease 0.9s;
           transform: scaleX(0);
           transform-origin: right;
         }
 
         a {
-          transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1),
-            opacity 0.6s ease;
+          transition: transform 0.3s linear,
+            opacity 0.5s linear;
           transform: translate(0px, -5px);
           opacity: 0;
 
@@ -869,11 +866,32 @@ nav {
       display: flex;
       flex-wrap: wrap;
 
+      .row{width: 100%;margin-bottom: 15px;}
+      .icon-row{
+        position: relative;
+        input{
+          padding-left: 60px;
+          color: v.$font-primary;
+        }
+        .material-icons{
+          position: absolute;
+          left: 15px;
+          top: 35px;
+          color:v.$bg-color;
+          font-size: 30px;
+          cursor: pointer;
+          &.pwd-on{
+            color: #C7BA9B;
+          }
+        }
+      }
+      
+
       .row-1 {
         @include v.row-width(10%);
 
         @include v.pad-width {
-          flex-basis: 50%;
+          flex-basis: 50%; 
         }
 
         @include v.phone-width {
@@ -957,8 +975,6 @@ nav {
           flex: 100%;
           width: 100%;
         }
-
-
       }
 
       .row-8 {
@@ -1093,14 +1109,15 @@ footer {
 
   label {
     display: block;
-    margin-bottom: 3px;
+    margin: 3px 0;
     @extend %weight600;
   }
 
+  input{background: #e2e2e2;color: v.$secondary;}
+
   .modal-info {
     padding: 25px 4vw;
-
-    .info:not(:last-of-type) {
+    .row:not(:last-of-type) {
       margin-bottom: 15px;
 
       .forgetpwd {
@@ -1183,13 +1200,14 @@ footer {
         a {
           background-color: v.$bg-color;
           width: 30px;
-          height: 30px;
+          height: 26px;
           text-align: center;
           border-radius: 100%;
           margin-left: 5px;
+          line-height: 21px;
 
           .material-icons {
-            font-size: 17px;
+            font-size: 16px;
           }
 
         }
@@ -1238,6 +1256,7 @@ footer {
 
 /* other share */
 :focus{outline-width: 0px;}
+::placeholder{color: #8181817a;}
 .hide{display: none;}
 .s-font{font-size: 0.9rem;}
 .xs-font{font-size: 0.8rem;}
